// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/* @flow */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`block-comment-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/*                     @noflow */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/*                     @noflow */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`filename.js.flow format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo = {"1":bar} // "1" should quoted

=====================================output=====================================
foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`inline-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
// @flow

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`inline-comment-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//                     @noflow

foo = {"1":bar} // "1" should quoted


=====================================output=====================================
//                     @noflow

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`pragma.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/**
 * @flow
 */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`pragma-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 *                      @noflow
 */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/**
 *                      @noflow
 */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`should-not-use-flow.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo = {"1":bar} // "1" should unquoted

=====================================output=====================================
foo = { 1: bar }; // "1" should unquoted

================================================================================
`;
